# serializer version: 1
# name: test_describe[compute-pool-compute_pool_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[database-database_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[function-function_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[git-repository-git_repository_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[integration-integration_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[network-rule-network_rule_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[procedure-procedure_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[role-role_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[schema-schema_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[secret-secret_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[service-service_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[stage-stage_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[stream-stream_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[streamlit-streamlit_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[table-table_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[task-task_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[user-user_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[view-view_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[warehouse-warehouse_example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe_fails_image_repository
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Describe is currently not supported for object of type image-repository      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_drop[compute-pool-compute_pool_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | c      |
  +--------+
  
  '''
# ---
# name: test_drop[database-database_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | d      |
  +--------+
  
  '''
# ---
# name: test_drop[function-function_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | f      |
  +--------+
  
  '''
# ---
# name: test_drop[git-repository-git_repository_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | g      |
  +--------+
  
  '''
# ---
# name: test_drop[image-repository-image_repository_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | i      |
  +--------+
  
  '''
# ---
# name: test_drop[integration-integration_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | i      |
  +--------+
  
  '''
# ---
# name: test_drop[network-rule-network_rule_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | n      |
  +--------+
  
  '''
# ---
# name: test_drop[procedure-procedure_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | p      |
  +--------+
  
  '''
# ---
# name: test_drop[role-role_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | r      |
  +--------+
  
  '''
# ---
# name: test_drop[schema-schema_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[secret-secret_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[service-service_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[stage-stage_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[stream-stream_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[streamlit-streamlit_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[table-table_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | t      |
  +--------+
  
  '''
# ---
# name: test_drop[task-task_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | t      |
  +--------+
  
  '''
# ---
# name: test_drop[user-user_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | u      |
  +--------+
  
  '''
# ---
# name: test_drop[view-view_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | v      |
  +--------+
  
  '''
# ---
# name: test_drop[warehouse-warehouse_example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | w      |
  +--------+
  
  '''
# ---
